Add comprehensive test coverage and fix Java 17 compatibility bugs
Co-authored-by: vorburger <298598+vorburger@users.noreply.github.com>